--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ services:
 language: java
 
 script:
-  - ./mvnw package
+  - ./mvnw clean package
 
 after_success:
-  - sh .travis/deploy_dockerhub.sh
   - test "$TRAVIS_BRANCH" = "master" && sh .travis/deploy_heroku.sh
