--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>4.2</version>
+        </dependency>
+    </dependencies>
+
 
 	<build>
 		<plugins>
