--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ script:
   - ./mvnw clean package
 
 after_success:
-  - test "$TRAVIS_BRANCH" = "master" && sh .travis/deploy_heroku.sh
+  - echo "Deploy "+ $TRAVIS_BRANCH
+  - test "$TRAVIS_BRANCH" = "master" && sh .travis/deploy_dockerhub.sh
